[package]
name = "daifuku"
version = "0.0.1"
edition = "2021"
authors = [""]
description = "A CLI tool for managing mochi-based sources."
# license = "MIT"

[[bin]]
name = "daifuku"
path = "src/bin/main.rs"

[lib]
name = "api"
path = "src/lib/lib.rs"

[dependencies]
clap = { version = "4.1.14", features = ["derive"] }
