[package]
name = "mochi-cli"
version = "0.0.3"
edition = "2021"
authors = ["ErrorErrorError"]
description = "A CLI tool for managing mochi-based modules."
license = "MIT"
homepage = "https://github.com/Mochi-Team/cli"
repository = "https://github.com/Mochi-Team/cli"
keywords = ["cli", "mochi", "parse"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.1.14", features = ["derive"] }
local-ip-address = "0.5.6"
serde = { version = "1.0.189", features = ["serde_derive"] }
serde_json = "1.0.1"
sha256 = "1.4.0"
tera = "1.19.1"
tiny_http = "0.12"
toml = "0.8.2"
unicode-xid = "0.2.4"

[build-dependencies]
clap-markdown = "0.1.3"
anyhow = "1.0.75"
clap = { version = "4.1.14", features = ["derive"] }
local-ip-address = "0.5.6"
serde = { version = "1.0.189", features = ["serde_derive"] }
serde_json = "1.0.1"
sha256 = "1.4.0"
tera = "1.19.1"
tiny_http = "0.12"
toml = "0.8.2"
unicode-xid = "0.2.4"
